# video-conversion

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_video_errors.py  video.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
openspec/changes/add-linting-and-best-practices/: tasks.md
openspec/changes/archive/2026-02-07-add-linting-and-best-practices/: design.md  proposal.md
openspec/changes/archive/2026-02-07-add-linting-and-best-practices/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-02-07-add-linting-and-best-practices/specs/linting/: spec.md
openspec/changes/archive/2026-02-07-add-linting-and-best-practices/specs/project-config/: spec.md
openspec/changes/output-file-conflict-detection/: design.md  proposal.md  tasks.md
openspec/changes/output-file-conflict-detection/specs/output-file-conflict-handling/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/linting/: spec.md
openspec/specs/project-config/: spec.md
