[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-conversion"
version = "1.0.0"
description = "A Python tool for organizing and compressing GoPro videos using FFmpeg"
requires-python = ">=3.10"
dependencies = [
    "ffprobe-python>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.0",
    "pytest>=7.0.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"video.py" = ["S603", "S607"]
"test_*.py" = ["S101", "S108"]
